# stg-cpp

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  pyproject.toml  stress.sh  todo
analytic/: KraichnanSpectra.nb
app/: CMakeLists.txt  kriging_main.cpp  spectral_main.cpp
app/include/stg/: kriging.hpp  spectral_method.hpp
app/include/stg/kriging/: data_loader.hpp  kriging_1d_analysis.hpp  kriging_3d_analysis.hpp  kriging_method_analysis.hpp  sequential_kriging_1d_analysis.hpp  squantial_kriging_1d_analysis.hpp
app/include/stg/spectral_method/: data_loader.hpp  des_generator_impl.hpp  i_spectral_method.hpp  integrator.hpp  kraichnan_method_impl.hpp  sequential_analysis.hpp  sequential_time_analysis.hpp  spectral_method_impl.hpp  superposition_generator.hpp  validation_data.hpp
app/src/: data_loader.cpp  i_spectral_method.cpp  spectral_method_impl.cpp
app/tests/: common.hpp  test_analisys_sequential.cpp  test_analysis_of_kriging_data.cpp  test_collect_data_from_vtk_files_for_kriging.cpp  test_collect_statistics_from_1d_data.cpp  test_des_method_generator.cpp  test_integrate_kriging_covariations.cpp  test_kraichnan_sequential_corr_analysis.cpp  test_kraichnan_spectral_generator.cpp  test_kraichnan_spectral_generator_gaussian_spectra.cpp  test_kriging_3d_analysis.cpp  test_single_folder_1d_analysis.cpp  test_spectral_generator_main_tests.cpp  test_spectral_method_combined.cpp  test_spectral_method_kraichnan_in_time.cpp  test_superposition_generator.cpp
gaussian_method/: CMakeLists.txt
gaussian_method/include/: fourier.hpp  kriging.hpp
gaussian_method/include/fourier/: fourier.hpp  ft.hpp
gaussian_method/include/kriging/: kriging.hpp  seqsim.hpp  space.hpp  stochastic_gaussian.hpp  varfun.hpp  variance_function.hpp
gaussian_method/src/: ft.cpp  kriging.cpp  seqsim.cpp  space.cpp  stochastic_gaussian.cpp  varfun.cpp
gaussian_method/tests/: common.hpp  test_direct_fourier_transform.cpp  test_generate_field_by_kriging.cpp  test_save_target_spectra.cpp  test_test_my_fourier.cpp
images/: integrals.txt
mesh/: CMakeLists.txt
mesh/include/: fem.hpp  mesh_builders.hpp
mesh/include/fem/: concepts.hpp  element_mixins.hpp  fe_element_crtp.hpp  fe_factory.hpp  fe_mesh.hpp  i_fe_mesh.hpp  iapproximator.hpp  ifinite_element.hpp  lagrangian_voxel_fe.hpp
mesh/include/geometry/: geometry.hpp
mesh/include/mesh_builders/: cube_fe_mesh.hpp  mesh_builder_fwd.hpp  mesh_builders.hpp
mesh/include/rtable/: cube_relation_table.hpp  cube_vtk_saver.hpp  i_relation_table.hpp  relation_table.hpp  vtk_saver.hpp
mesh/include/spherical_mesh/: sphere_mesh.hpp
mesh/include/vtk_parser/: rectilinear_grid_parser.hpp
mesh/src/: ifinite_element.cpp  lagrangian_voxel_fe.cpp
mesh/tests/: common.hpp  test_build_cube_prizm_fe_mesh.cpp  test_create_and_save_pure_cube_esh.cpp  test_crtp_concept_fe.cpp  test_geometry.cpp  test_integrate_over_mesh.cpp  test_lagrangian_voxel_fe.cpp  test_save_mesh_in_vtk.cpp  test_spherical_integration.cpp  test_vtk_parsing_tests.cpp
random_generator/: CMakeLists.txt
random_generator/include/: stg_rangom.hpp
random_generator/include/stg_random/: generator_concept.hpp  generator_engines.hpp  irn_generator.hpp  multidim_gaussian_genrator.hpp  random_range.hpp  rn_generator_impl.hpp
random_generator/src/: generator_concept.cpp  generator_engines.cpp  irn_generator.cpp
random_generator/tests/: common.hpp  test_generator.cpp  test_multidimensional_distr.cpp
sandbox/: CMakeLists.txt  sandbox_main.cpp
statistics/: CMakeLists.txt
statistics/include/: statistics.hpp
statistics/include/statistics/: concepts.hpp  correlation.hpp  covariance.hpp  deviation.hpp  mean.hpp  sequnetial_std.hpp  space_correlation.hpp  space_covariation.hpp  standard_deviation.hpp  transform_actions.hpp
statistics/src/: correlation.cpp  covariation.cpp  mean.cpp  standard_deviation.cpp
statistics/tests/: common.hpp  test_find_std_averaged_over_time.cpp  test_mean.cpp  test_space_statistics.cpp  test_statistics_using_ranges.cpp
stg_generators/: CMakeLists.txt
stg_generators/include/: stg_generators.hpp
stg_generators/include/mocks/: mock_spectral.hpp
stg_generators/include/stg_generators/: coro_generator.hpp  des_method.hpp  detail.hpp  fluctuation_fourier_sum.hpp  generator_builder.hpp  generator_concept.hpp  i_fluctuation_generator.hpp  i_spectral_generator.hpp  kraichnan_appr_generator.hpp  kraichnan_spectral_generator.hpp  spectra_approximator.hpp  spectral_generator.hpp  spectral_generator_config.hpp  spectras_base.hpp
stg_generators/src/: generator_concept.cpp
stg_generators/tests/: common.hpp  test_kraichnan_generator_quantities.cpp  test_spectral_generator.cpp
tensor/: CMakeLists.txt
tensor/include/stg_tensor/: tensor.hpp
tensor/tests/: common.hpp  test_tensor.cpp
test_resources/: phi_12.vtk  phi_13.vtk  phi_22.vtk  phi_23.vtk  phi_33.vtk  r_12.vtk  r_13.vtk  r_22.vtk  r_23.vtk  r_33.vtk  sg3_L10_N21_eigcut200_try0.vtk  sg3_L10_N21_eigcut200_try1.vtk  sg3_L10_N21_eigcut200_try10.vtk  sg3_L10_N21_eigcut200_try11.vtk  sg3_L10_N21_eigcut200_try12.vtk  sg3_L10_N21_eigcut200_try13.vtk  sg3_L10_N21_eigcut200_try14.vtk  sg3_L10_N21_eigcut200_try15.vtk  sg3_L10_N21_eigcut200_try16.vtk  sg3_L10_N21_eigcut200_try17.vtk  sg3_L10_N21_eigcut200_try18.vtk  sg3_L10_N21_eigcut200_try19.vtk  sg3_L10_N21_eigcut200_try2.vtk  sg3_L10_N21_eigcut200_try20.vtk  (+138 more)
utility/: CMakeLists.txt
utility/include/: stg_coro_future.hpp  stg_thread_pool.hpp
utility/include/stg_coro_future/: coroutine_future.hpp
utility/include/stg_thread_pool/: stg_thread_pool.hpp
utility/src/: stg_thread_pool.cpp
utility/tests/: common.hpp  main_tests.cpp  test_stg_coro_future.cpp  test_thread_pool.hpp
velocity_field/: CMakeLists.txt
velocity_field/include/: velocity_field.hpp
velocity_field/include/velocity_field/: concepts.hpp  ivelocity_field.hpp  velocity_field.hpp  velocity_field_1d.hpp  velocity_samples.hpp  velocity_samples_1d.hpp
velocity_field/src/: ivelocity_field.cpp
velocity_field/tests/: common.hpp  test_create_test_velocty_field.cpp
(+6002 files in other folders)
