[tool.poetry]
name = "stg-v2"
version = "0.1.0"
description = ""
authors = ["VsevolodChaplanov <woornad@gmail.com>"]
readme = "README.md"
packages = [{include = "stg_v2"}]

[tool.poetry.dependencies]
conan = "*"
python = "^3.10"
numpy = "1.24.1"
matplotlib = "3.7.3"
pandas = "1.5.3"
seaborn = "0.12.2"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
